Update and rename 4041.md to 404.md

--- a/pages/404.md
+++ b/pages/404.md
@@ -1,6 +1,7 @@
 ---
 layout: none
 title: 404 Not Found
+permalink: /404.html
 ---
 
 <html>
@@ -16,10 +17,7 @@ title: 404 Not Found
   </form>
 
   <div class="terminal">
-	<p class="prompt">Always remember 3 things:<br>
-	1. I'm here.<br>
-	2. I'll Wait. <br>
-	3. I love you more than anything.
+	<p class="prompt">
 	<br><br><br>
 	<br><br><br>
 	<b>Note:</b> The page you requested need a password, Meow. <br>
