--- a/pages/404.md
+++ b/pages/404.md
@@ -20,8 +20,8 @@ permalink: /404.html
 	<p class="prompt">
 	<br><br><br>
 	<br><br><br>
-	<b>Note:</b> The page you requested need a password, Meow. <br>
-	If you don't know then try typing 'kittens'.</p>
+	<b>Note:</b> This site has been suspended due to inactivity. Thanks for visitinvg., Meow. <br>
+	If you want to know more then type 'kittens' and enter.</p>
       <p class="prompt output new-output"></p>
   </div>
 </div>
